put engineering on the top, fix overlap issue on large display

--- a/themes/scholars/css/page-home.css
+++ b/themes/scholars/css/page-home.css
@@ -135,29 +135,32 @@ div#logo-container {
 	margin: 0 20px;
 	padding-left: 6px;
 }
-#jgsm-image {
-	background: #fff url('../images/johnson-logo.png') no-repeat center center;
-	height: 110px;
-	background-size: 75%;
+/*#jgsm-image {
+	padding: 15px 0 10px 25px;
+	margin: -15px 0 -10px -25px;
 }
 #eng-image {
-	background: #fff url('../images/eng-logo.png') no-repeat center center;
-	height: 60px;
-	background-size: 65%;
+	padding: 15px 0 5px 20px;
+	margin: -15px 0 -5px -20px;
 }
 #bti-image {
-	background: #fff url('../images/bti-logo.png') no-repeat center center;
-	height: 120px;
-	background-size: 70%;
-	margin-top: -20px;
+	padding: 8px 0 10px 20px;
+	margin: -8px 0 -10px -20px;
+} */
+#jgsm-image img {
+	height: 80px;
+}
+#eng-image img {
+	height: 35px;
+}
+#bti-image img {
+	height: 80px;
 }
 #cals-image {
-	background: #fff url('../images/arts_quad.jpg') no-repeat center center;
 	height: 210px;
-	background-size: cover;
 }
 #jgsm-image:hover, #eng-image:hover, #cals-image:hover, #bti-image:hover {
-	box-shadow: 10px 10px 5px #888888;
+	opacity: 0.6;
 }
 #partners-row1 {
 	margin: 30px 30px 0 30px;
